GIGHUB/force-app/main/default/objects/Project__c/fields/Assigned_Freelancer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Freelancer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Freelancer</label>
    <referenceTo>Free__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>