GIGHUB/force-app/main/default/objects/Project__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used by automation and Apex to compute project cost (Estimated_Hours__c).</description>
    <inlineHelpText>Estimated number of hours for this project — used for cost calculations.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>