GIGHUB/force-app/main/default/objects/Project__c/fields/Project_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Project_Revenue__c</fullName>
    <label>Project Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>