GIGHUB/force-app/main/default/objects/Project__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>