GIGHUB/force-app/main/default/objects/Project__c/validationRules/Require_Freelancer_For_Completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Freelancer_For_Completion</fullName>
    <active>true</active>
    <description>Prevents setting Project Status = Completed if no Freelancer is assigned.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Completed&quot;),
  ISBLANK(Assigned_Freelancer__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You must assign a Freelancer before marking the Project as Completed.</errorMessage>
</ValidationRule>